# doukutsu-rs

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  ANDROID_CONTROLLER_SUPPORT.md  AUTHORS.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml  settings_menu.rs
.cargo/: config
.github/ISSUE_TEMPLATE/: 001-bug_report.yml  002-feature_request.yml  003-todo.yml  config.yml
.github/workflows/: ci.yml  release.yml
app/: .gitignore  build.gradle  gradle.properties  settings.gradle
app/app/: build.gradle  packages.txt
app/app/src/main/cpp/: CMakeLists.txt
benches/: fixed.rs
docs/: music_table.md
drs-framework/: Cargo.toml
drs-framework/src/: error.rs  lib.rs
drsandroid/: Cargo.toml  build.gradle.kts  gradle.properties  settings.gradle
drsandroid/app/: build.gradle.kts  packages.txt
drsandroid/app/src/main/: AndroidManifest.xml
drsandroid/app/src/main/cpp/: CMakeLists.txt  dummy.cpp
drsandroid/app/src/main/java/io/github/doukutsu_rs/: ActivityUtils.java  DoukutsuDocumentsProvider.java  DownloadActivity.java  GameActivity.java  MainActivity.java
drsandroid/app/src/main/res/drawable/: ic_launcher_background.xml
drsandroid/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
drsandroid/app/src/main/res/values-v27/: themes.xml
drsandroid/src/: lib.rs
drshorizon/: Cargo.toml  README.md  aarch64-nintendo-switch.json  aarch64-nintendo-switch.ld  aarch64-nintendo-switch.specs  aarch64_nintendo_switch.ld  aarch64_nintendo_switch.specs  build.rs  build_debug.sh  build_release.sh  symbolize.js
drshorizon/.cargo/: config
drshorizon/src/: main.rs
drsios/: Cargo.toml  build.rs
drsios/doukutsu-rs/: Info.plist  Launch Screen.storyboard  main.mm
drsios/doukutsu-rs.xcodeproj/: project.pbxproj
drsios/doukutsu-rs.xcodeproj/xcshareddata/xcschemes/: doukutsu-rs.xcscheme
drsios/doukutsu-rs/Assets.xcassets/LaunchImage.launchimage/: Contents.json
drsios/doukutsu-rs/Assets.xcassets/Splash.imageset/: Contents.json
drsios/doukutsu-rs/Assets.xcassets/TextLogo.imageset/: Contents.json
drsios/src/: lib.rs
drsuwp/: Cargo.toml
drsuwp/src/: lib.rs
gradle/wrapper/: gradle-wrapper.properties
misc/: update-gamecontrollerdb.sh
misc/json-schemas/: locale.json  music_table.json  root.json  skinmeta.json  texture_sizes.json  translation.json
res/: io.github.doukutsu_rs.doukutsu-rs.metainfo.xml  resources.rc  sue_crab_banner_github.xcf
res/flatpak/: io.github.doukutsu_rs.doukutsu-rs.desktop  io.github.doukutsu_rs.doukutsu-rs.metainfo.xml
src/: bmfont.rs  bmfont_renderer.rs  builtin_fs.rs  bullet.rs  caret.h  caret.rs  common.cpp  common.h  common.rs  difficulty_modifier.rs  doukutsu.handheld.patch  doukutsu_rs.h  encoding.rs  engine_constants.h  engine_constants.rs  entity.rs  exe_parser.rs  frame.rs  game.cpp  game.h  game_state.rs  hooks.rs  i18n.rs  inventory.rs  lib.rs  live_debugger.rs  macros.rs  main.cpp  main.rs  main_android.rs  map.cpp  map.h  map.rs  menu.rs  mod_list.rs  mod_requirements.rs  npc.cpp  npc.h  physics.cpp  physics.h  (+24 more)
src/assets/: builtin_font.fnt
src/builtin/: builtin_font.bmfc  builtin_font.fnt
src/components/: background.rs  boss_life_bar.rs  chat.rs  compact_jukebox.rs  credits.rs  draw_common.rs  fade.rs  falling_island.rs  flash.rs  hud.rs  inventory.rs  lights_2d.rs  map_system.rs  mod.rs  nikumaru.rs  number_popup.rs  pacing_graph.rs  replay.rs  stage_select.rs  text_boxes.rs  tilemap.rs  water_renderer.rs  whimsical_star.rs
src/data/: builtin_fs.rs  exe_parser.rs  mod.rs  vanilla.rs
src/discord/: mod.rs
src/editor/: mod.rs
src/enemy/: mod.rs
src/engine_constants/: mod.rs  npcs.cpp  npcs.h  npcs.rs
src/framework/: backend.cpp  backend.h  backend.rs  backend_glutin.rs  backend_horizon.rs  backend_null.rs  backend_opengl.rs  backend_sdl2.cpp  backend_sdl2.h  backend_sdl2.rs  backend_sokol.rs  backend_winit.rs  clipboard.rs  context.cpp  context.h  context.rs  error.h  error.rs  filesystem.cpp  filesystem.h  filesystem.rs  frame_pacer.rs  gamepad.cpp  gamepad.h  gamepad.rs  gamepad_android.rs  gl.rs  graphics.rs  image.rs  input.rs  keyboard.cpp  keyboard.h  keyboard.rs  mod.rs  render_opengl.rs  render_wgpu.rs  ui.rs  util.rs  vfs.rs  viewport.rs
src/game/: aspect_ratio.rs  caret.rs  filesystem_container.rs  frame.rs  inventory.rs  map.rs  mod.rs  physics.rs  profile.rs  save_container.rs  settings.rs  shared_game_state.rs  stage.rs
src/ggez/: conf.rs  context.rs  error.rs  event.rs  filesystem.rs  mod.rs  timer.rs  vfs.rs
src/graphics/: bmfont.rs  bmfont_renderer.rs  font.rs  mod.rs  texture_set.rs
src/input/: combined_menu_controller.rs  combined_player_controller.rs  dummy_player_controller.rs  gamepad_player_controller.rs  keyboard_player_controller.rs  mod.rs  player_controller.rs  replay_player_controller.rs  touch_controls.h  touch_controls.rs  touch_player_controller.rs
src/live_debugger/: command_line.rs  mod.rs
src/menu/: controls_menu.rs  coop_menu.rs  mod.rs  pause_menu.rs  save_select_menu.rs  settings_menu.rs
src/netplay/: client.rs  common.rs  future.rs  mod.rs  packets.rs  protocol.rs  server.rs  server_config.rs
src/npc/: balrog.rs  booster.rs  chaco.rs  characters.rs  egg_corridor.rs  first_cave.rs  grasstown.rs  igor.rs  intro.rs  list.rs  maze.rs  mimiga_village.rs  misc.rs  misery.rs  mod.rs  npc_utils.rs  pickups.rs  quote.rs  sand_zone.rs  santa.rs  sue.rs  toroko.rs  utils.rs  weapon_trail.rs
src/player/: mod.rs  player_hit.rs  player_list.rs
src/scene/: editor_scene.rs  game_scene.rs  jukebox_scene.rs  loading_scene.rs  mod.rs  netplay_scene.rs  no_data_scene.rs  title_scene.rs
src/scripting/: boot.lua  doukutsu.d.ts  doukutsu.rs  mod.rs  player.rs  scene.rs
src/sound/: fir.rs  mod.rs  ogg_playback.rs  org_playback.rs  organya.rs  pixtone.rs  pixtone_sfx.rs  playback.rs  sound_manager.cpp  sound_manager.h  stuff.rs  wav.rs  wave_bank.rs
src/util/: atom.rs  bitvec.rs  browser.rs  encoding.rs  file_picker.rs  mod.rs  rng.rs
src/weapon/: blade.rs  bubbler.rs  bullet.rs  fireball.rs  machine_gun.rs  mod.rs  (+6 more)
(+215 files in other folders)
