[package]
name = "doukutsu-rs"
description = "A re-implementation of Cave Story (Doukutsu Monogatari) engine"
version = "1.0.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["lib"]

[[bin]]
name = "doukutsu-rs"
path = "src/main.rs"
test = false
bench = false
required-features = ["exe"]

[profile.release]
# This is intentional. Enabling LTO inflates build times and does not provide us any significant benefits.
lto = "off"
panic = "abort"
codegen-units = 256
incremental = true
split-debuginfo = "packed"

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false
codegen-units = 256

[package.metadata.bundle]
name = "doukutsu-rs"
identifier = "io.github.doukutsu_rs"
icon = ["res/macos/16x16.png", "res/macos/16x16@2x.png", "res/macos/32x32.png", "res/macos/32x32@2x.png", "res/macos/128x128.png", "res/macos/128x128@2x.png", "res/macos/256x256.png", "res/macos/256x256@2x.png", "res/macos/512x512.png", "res/macos/512x512@2x.png"]
version = "1.0.0"
resources = ["data"]
copyright = "Copyright (c) doukutsu-rs contributors"
category = "Game"
osx_minimum_system_version = "10.12"

[features]
default = ["default-base", "backend-sdl", "render-opengl", "exe", "webbrowser", "discord-rpc"]
default-base = ["ogg-playback"]
ogg-playback = ["lewton"]
backend-sdl = ["sdl2", "sdl2-sys"]
backend-winit = ["winit", "glutin", "render-opengl"]
backend-horizon = []
render-opengl = []
discord-rpc = ["discord-rich-presence"]
netplay = ["serde_cbor"]
editor = []
exe = []
android = []

[dependencies]
#glutin = { path = "./3rdparty/glutin/glutin", optional = true }
#winit = { path = "./3rdparty/winit", optional = true, default_features = false, features = ["x11"] }
#sdl2 = { path = "./3rdparty/rust-sdl2", optional = true, features = ["unsafe_textures", "bundled", "static-link"] }
#sdl2-sys = { path = "./3rdparty/rust-sdl2/sdl2-sys", optional = true, features = ["bundled", "static-link"] }
#cpal = { path = "./3rdparty/cpal" }
bitfield = "0.16"
byteorder = "1.4"
case_insensitive_hashmap = "1.0.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
cpal = { git = "https://github.com/doukutsu-rs/cpal", rev = "9d269d8724102404e73a61e9def0c0cbc921b676" }
directories = "3"
discord-rich-presence = { version = "0.2", optional = true }
downcast = "0.11"
encoding_rs = "0.8.33"
fern = "0.6.2"
glutin = { version = "0.32.0", optional = true }
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "67f7f11363e62f09aa0e1288a17800e505860486" }
image = { version = "0.24", default-features = false, features = ["png", "bmp"] }
itertools = "0.13.0"
include-flate = "0.3.0"
lazy_static = "1.4"
lewton = { version = "0.10", optional = true }
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
open = "3.2"
paste = "1.0"
pelite = { version = ">=0.9.2", default-features = false, features = ["std"] }
sdl2 = { version = "0.37", optional = true, features = ["unsafe_textures", "bundled", "static-link"] }
sdl2-sys = { version = "0.37", optional = true, features = ["bundled", "static-link"] }
rc-box = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_cbor = { version = "0.11", optional = true }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
# remove and replace when extract_if is in stable
vec_mut_scan = "0.4"
webbrowser = { version = "1.0.1", optional = true }
winit = { version = "0.30.2", optional = true, default_features = false, features = ["x11"] }
xmltree = "0.10"

#hack to not link SDL_image on Windows(causes a linker error)
[target.'cfg(not(target_os = "windows"))'.dependencies]
sdl2 = { version = "0.37", optional = true, features = ["image", "unsafe_textures", "bundled", "static-link"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.5.2"

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.7"
ndk-glue = "0.7"
ndk-sys = "0.4"
jni = "0.20"

[target.'cfg(target_os = "horizon")'.dependencies]
#deko3d = { path = "./3rdparty/deko3d" }
deko3d = { git = "https://github.com/doukutsu-rs/deko3d-rs", rev = "acddd174321c842367971faeb9aebcdb99ddfef3" }
