[package]
name = "drsandroid"
description = "doukutsu-rs targeted for Android"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "off"
codegen-units = 256
incremental = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ndk = "0.7"
ndk-glue = "0.7"
ndk-sys = "0.4"
doukutsu-rs = { path = "../", default-features = false, features = ["default-base", "backend-glutin", "webbrowser"] }
