[package]
name = "drshorizon"
description = "doukutsu-rs targeted for Nintendo Switch"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 256
incremental = true

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false
incremental = true

[profile.dev.package."doukutsu-rs"]
opt-level = 3
lto = "off"
overflow-checks = false
codegen-units = 256
incremental = true

[dependencies]
doukutsu-rs = { path = "../", default-features = false, features = ["default-base", "backend-horizon"] }
