[package]
name = "drsios"
description = "doukutsu-rs targeted for iOS"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "off"
codegen-units = 256
incremental = true

[profile.dev]
opt-level = 3
lto = "off"
overflow-checks = false
codegen-units = 256
incremental = true

[lib]
crate-type = ["staticlib"]

[dependencies]
doukutsu-rs = { path = "../", default-features = false, features = ["default-base", "backend-winit", "webbrowser"] }
